Added ad for MemeForge

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -3,7 +3,11 @@
 	<%= yield %>
 	<br />
 	<div>
-		More Mxit: <%= @mixup_ad %>
+		More Mxit: <a href="mxit://[memeforge]/" type="mxit/service-navigation">Make your photos more awesome MemeForge!</a> | <%= @mixup_ad %>
+	</div>
+	<br />
+	<div>
+
 	</div>
 </body>
 </html>
