--- a/views/layout.erb
+++ b/views/layout.erb
@@ -3,11 +3,19 @@
 	<%= yield %>
 	<br />
 	<div>
+		------
+	</div>
+	<br />	
+	<div>
 		More Mxit: <a href="mxit://[communityportal:Refresh]/ReferralPage?ItemId=8215822" type="mxit/service-navigation">Add text to your photos with MemeForge!</a> | <%= @mixup_ad %>
 	</div>
 	<br />
 	<div>
 		<mxit:advert auid="361758"/>
+	</div>
+	<br />
+	<div>
+		<mxit:advert auid="401690"/>
 	</div>
 </body>
 </html>
