--- a/views/layout.erb
+++ b/views/layout.erb
@@ -5,7 +5,10 @@
 	<div>
 		------
 	</div>
-	<br />	
+	<br />
+	<div>
+		<a href='mxit://[communityportal]/RecommendPage?ItemId=9392697'>Share app with friends</a>
+	</div>	
 	<div>
 		More Mxit: <a href="mxit://[communityportal:Refresh]/ReferralPage?ItemId=8215822" type="mxit/service-navigation">Add text to your photos with MemeForge!</a> | <%= @mixup_ad %>
 	</div>
