--- a/views/layout.erb
+++ b/views/layout.erb
@@ -7,8 +7,9 @@
 	</div>
 	<br />
 	<div>
-		<a href='mxit://[communityportal]/RecommendPage?ItemId=9392697'>Share app with friends</a>
-	</div>	
+		<a href='mxit://[communityportal]/RecommendPage?ItemId=9392697' type="mxit/service-navigation">Click to share with friends!</a>
+	</div>
+	<br />	
 	<div>
 		More Mxit: <a href="mxit://[communityportal:Refresh]/ReferralPage?ItemId=8215822" type="mxit/service-navigation">Add text to your photos with MemeForge!</a> | <%= @mixup_ad %>
 	</div>
