--- a/views/layout.erb
+++ b/views/layout.erb
@@ -7,7 +7,7 @@
 	</div>
 	<br />
 	<div>
-		<a href='mxit://[communityportal]/RecommendPage?ItemId=9392697' type="mxit/service-navigation">Click to share with friends!</a>
+		<a href='mxit://[communityportal]/RecommendPage?ItemId=9392697' type="mxit/service-navigation">Click to share this app with friends! :-)</a>
 	</div>
 	<br />	
 	<div>
