--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,7 +1,7 @@
 <html>
 <body>
 	<div>
-		<mxit:advert auid=<%= ENV['MXIT_APP_AUID1'] %> />
+		<mxit:advert auid="<%= ENV['MXIT_APP_AUID1'] %>" />
 	</div>
 	<br />		
 	<div>
@@ -18,7 +18,7 @@
 	</div>
 	<br />	
 	<div>
-		<mxit:advert auid=<%= ENV['MXIT_APP_AUID2'] %> />
+		<mxit:advert auid="<%= ENV['MXIT_APP_AUID2'] %>" />
 	</div>
 </body>
 </html>
